[package]
name = "nerust_wgpu"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
clap.workspace = true
log.workspace = true
muda.workspace = true
nerust_backend_wgpu.workspace = true
nerust_core.workspace = true
nerust_gui_shell.workspace = true
nerust_screen_traits.workspace = true
nerust_sound_openal.workspace = true
raw-window-handle.workspace = true
simple_logger.workspace = true
tao.workspace = true

[target.'cfg(any(target_os = "linux", target_os = "dragonfly", target_os = "freebsd", target_os = "netbsd", target_os = "openbsd"))'.dependencies]
gdkwayland-sys = "=0.18.2"
gdkx11-sys = "=0.18.2"
gtk = "=0.18.2"
