[package]
name = "nerust_input_nes_runtime"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
log.workspace = true
nerust_core.workspace = true
nerust_input_nes.workspace = true
rmp-serde.workspace = true
serde.workspace = true
serde_derive.workspace = true
