[package]
name = "nerust_nes_console"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
nerust_contract_core.workspace = true
nerust_input_nes_runtime.workspace = true
nerust_nes_core.workspace = true
nerust_nes_device.workspace = true
nerust_screen_buffer.workspace = true
nerust_screen_logical.workspace = true
nerust_screen_physical.workspace = true
nerust_screen_video.workspace = true
nerust_sound_traits.workspace = true
nerust_soundfilter.workspace = true
