[package]
name = "nerust_nes_core"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
bitflags.workspace = true
crc.workspace = true
log.workspace = true
nerust_contract_core.workspace = true
nerust_screen_video.workspace = true
nerust_soundfilter.workspace = true
nerust_serialize.workspace = true
rmp-serde.workspace = true
serde.workspace = true
serde_bytes.workspace = true
strum.workspace = true
strum_macros.workspace = true
thiserror.workspace = true
typetag.workspace = true

[dev-dependencies]
hound.workspace = true
