[package]
name = "nerust_nes_core"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
bitflags.workspace = true
crc.workspace = true
log.workspace = true
nerust_core_traits.workspace = true
nerust_input_traits.workspace = true
nerust_render_base.workspace = true
nerust_sound_filter.workspace = true
nerust_serialize.workspace = true
rmp-serde.workspace = true
serde.workspace = true
serde_bytes.workspace = true
strum.workspace = true
strum_macros.workspace = true
thiserror.workspace = true
typetag.workspace = true

[dev-dependencies]
hound.workspace = true
