[package]
authors.workspace = true
edition.workspace = true
license.workspace = true
name = "nerust_nes_core"
rust-version.workspace = true
version.workspace = true

[dependencies]
bitflags.workspace = true
crc.workspace = true
log.workspace = true
nerust_core_traits.workspace = true
nerust_input_traits.workspace = true
nerust_render_traits.workspace = true
nerust_serialize.workspace = true
nerust_sound_filter.workspace = true
rmp-serde.workspace = true
serde.workspace = true
serde_bytes.workspace = true
strum.workspace = true
thiserror.workspace = true
typetag.workspace = true

[package.metadata.cargo-machete]
ignored = ["serde_bytes"]

[dev-dependencies]
hound.workspace = true
