[package]
name = "nerust_nes_device"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
nerust_core_traits.workspace = true
nerust_input_traits.workspace = true
nerust_nes_controller.workspace = true
nerust_nes_core.workspace = true
