[package]
name = "nerust_nes_factory"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
nerust_core_traits.workspace = true
nerust_gui_settings.workspace = true
nerust_input_traits.workspace = true
nerust_nes_core.workspace = true
nerust_nes_device.workspace = true
nerust_render_base.workspace = true
clap.workspace = true
rmp-serde.workspace = true
