[package]
authors.workspace = true
edition.workspace = true
license.workspace = true
name = "nerust_nes_factory"
rust-version.workspace = true
version.workspace = true

[dependencies]
clap.workspace = true
nerust_core_traits.workspace = true
nerust_input_traits.workspace = true
nerust_nes_core.workspace = true
nerust_nes_device.workspace = true
nerust_nes_settings.workspace = true
nerust_render_filters.workspace = true
nerust_render_traits.workspace = true
rmp-serde.workspace = true
serde.workspace = true
