[package]
name = "nerust_nes_settings"
version.workspace = true
authors.workspace = true
description = "NES-specific settings types (domain layer)"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
