[package]
name = "nerust_render_gl"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
gl.workspace = true
glutin.workspace = true
log.workspace = true
nerust_glwrap.workspace = true
nerust_render_base.workspace = true
raw-window-handle.workspace = true
