[package]
authors.workspace = true
edition.workspace = true
license.workspace = true
name = "nerust_render_gl"
rust-version.workspace = true
version.workspace = true

[dependencies]
gl.workspace = true
glutin.workspace = true
log.workspace = true
nerust_glwrap.workspace = true
nerust_render_ntsc.workspace = true
nerust_render_traits.workspace = true
raw-window-handle.workspace = true
